--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -2,13 +2,14 @@
 export interface Props {
   title: string;
   href: string;
+  class?: string;
 }
 
-const { href, title, body } = Astro.props;
+const { href, title, class: className } = Astro.props;
 ---
 
 <li class="link-card">
-  <a href={href}>
+  <a href={href} class={className}>
     <h2>
       {title}
       <span>&rarr;</span>
@@ -34,7 +35,6 @@ const { href, title, body } = Astro.props;
     width: 100%;
     text-decoration: none;
     line-height: 1.4;
-    padding: 1rem 1.3rem;
     border-radius: 0.35rem;
     color: #111;
     background-color: white;
@@ -42,7 +42,6 @@ const { href, title, body } = Astro.props;
   }
   h2 {
     margin: 0;
-    font-size: 1.25rem;
     transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
   }
   p {
